--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,8 @@ classifiers =
 [options]
 zip_safe = False
 packages = find:
+install_requires =
+    precis-i18n
 
 [options.packages.find]
 include = trojan_linter
