--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ zip_safe = False
 packages = find:
 install_requires =
     precis-i18n
+    regex
 
 [options.packages.find]
 include = trojan_linter
