Add a test extra

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,8 @@ install_requires =
 
 [options.packages.find]
 include = trojan_linter
+
+[options.extras_require]
+test =
+    pytest
+    hypothesis
