Add a README and adjust packaging

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [metadata]
 name = trojan_linter
-version = 0.0
+version = 0.0.1
+url: https://github.com/encukou/trojan_linter
 description = Linter for reordered text, homoglyphs and control characters
-#long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
+long_description = file: README.rst
 keywords = linter, trojan-source
 license = MIT
 classifiers =
@@ -12,14 +13,11 @@ classifiers =
 
 [options]
 zip_safe = False
-packages = find:
+packages = trojan_linter
 install_requires =
     precis-i18n
     regex
     click
-
-[options.packages.find]
-include = trojan_linter
 
 [options.extras_require]
 test =
