Adjust packaging a bit more

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,12 @@
 [metadata]
 name = trojan_linter
-version = 0.0.1
+version = 0.0.2
 url: https://github.com/encukou/trojan_linter
 description = Linter for reordered text, homoglyphs and control characters
-long_description = file: README.rst
+long_description = file: README.md
+long_description_content_type = text/markdown
+author = Petr Viktorin
+author_email = encukou@gmail.com
 keywords = linter, trojan-source
 license = MIT
 classifiers =
